# irc

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/client/: main.rs
src/server/: channel.rs  client.rs  main.rs  message.rs  serverstate.rs  to_clrf_reader_writer.rs
