[package]
name = "siri"
version = "0.1.0"
authors = ["Sam Donow <drsam94@gmail.com>", "Jefferson Airplane Guanciale <il@yakay.li>", "Jenna 'MacAttack' MacCarley <jenna.maccarley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
bitflags = "1.0"
structopt = "0.3.13"
